--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
       <input placeholder="Link Wallpaper" id="link">
       <div class="row">
         <div class="col-4">
-          <img src="Kirito.jpeg" class="cover"/>
+          <img src="https://i.ibb.co/mvc5RfT/Kirito-6314.jpg" class="cover"/>
         </div>
         <div class="col-4">
-          <img src="sarada.jpeg" class="cover"/>
+          <img src="https://wallpapercave.com/wp/wp5624575.jpg" class="cover"/>
         </div>
         <div class="col-4">
-          <img src="kaneki.jpeg" class="cover"/>
+          <img src="https://wallpapercave.com/wp/wp5146497.jpg" class="cover"/>
         </div>
         <div class="col-4">
-          <img src="obito.jpeg" class="cover"/>
+          <img src="https://wallpapercave.com/wp/wp5526279.jpg" class="cover"/>
         </div>
         <div class="col-4">
-          <img src="toga.jpeg" class="cover"/>
+          <img src="https://wallpapercave.com/wp/wp5624576.jpg" class="cover"/>
         </div>
         <div class="col-4">
-          <img src="nolep.jpeg" class="cover"/>
+          <img src="https://wallpapercave.com/wp/wp5563414.png" class="cover"/>
         </div>
       </div>
     </div>
