--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <i class="fa fa-times" id="close"></i>
       <div class="header">
-        <img src="icon.png">
+        <img src="https://i.ibb.co/HByYYSZ/20210131-171916.png">
         <h5>Pilih tema yang tersedia</h5>
       </div>
       <input placeholder="Link Wallpaper" id="link">
