--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <div class="search">
     <div class="container">
-      <img src="icon.png" id="theme"/>
+      <img src="https://i.ibb.co/HByYYSZ/20210131-171916.png" id="theme"/>
       <input type="search" id="query" placeholder="Telusuri Yang Baik" autocomplete="off" autofocus/>
     </div>
   </div>
